--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,12 @@
-HI
-
+<li><a href="t1a01-basic-web-page-dj.html">t1a01-basic-web-page-dj.html</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="">...</a>
+<li><a href="work-not-screen-dj.md">work-not-screen-dj.md</a>
