--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <li><a href="t1a01-basic-web-page-dj.html">t1a01-basic-web-page-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t1a02-lists-tables-dj.html">t1a02-lists-tables-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
