--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
-<li><a href="">...</a>
+<li><a href="https://github.com/ibench205/game-dev-2023-2024/tree/main">my Github</a>
 <li><a href="work-not-screen-dj.md">work-not-screen-dj.md</a>
