--- a/public/t1a02-lists-tables-dj.html
+++ b/public/t1a02-lists-tables-dj.html
@@ -1,1 +1,14 @@
-aswer
+<html>
+<head>
+  <style></style>
+  <script></script>
+  <meta></meta>
+</head>
+<body bgcolor=green>
+<h6>version 0.0.1</h6>
+<h1 align=center>t1a02-list-table-fred</h1>
+
+<h3>Tables</h3>
+<table border=1>
+<tr></tr>
+</html>
