--- a/public/t1a04-css-dj.html
+++ b/public/t1a04-css-dj.html
@@ -1,1 +1,7 @@
-sfgh
+Version 0.0.1</br>
+<h1 align=center>T1A04 CSS by Fred</h1>
+
+Reference Link
+<a href="https://www.w3schools.com/cssref/default.asp">w3schools</a><br>
+
+Properly done with a .css file listing all css commands for your website  
