--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <li><a href="t1a02-lists-tables-dj.html">t1a02-lists-tables-dj.html</a>
 <li><a href="t1a03-forms-dj.html">t1a03-forms-dj.html</a>
 <li><a href="t1a04-css-dj.html">t1a04-css-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t1a05-input-output-by-fred-dj.html">t1a05-input-output-by-fred-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
