--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <li><a href="t1a03-forms-dj.html">t1a03-forms-dj.html</a>
 <li><a href="t1a04-css-dj.html">t1a04-css-dj.html</a>
 <li><a href="t1a05-input-output-by-fred-dj.html">t1a05-input-output-by-fred-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t1a06-variables-by-dj.html">t1a06-variables-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
