--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <li><a href="t1a05-input-output-by-fred-dj.html">t1a05-input-output-by-fred-dj.html</a>
 <li><a href="t1a06-variables-by-dj.html">t1a06-variables-by-dj.html</a>
 <li><a href="t1a07-decisions-by-dj.html">t1a07-decisions-by-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t1a08-loops-by-dj.html">t1a08-loops-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
