--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <li><a href="t1a07-decisions-by-dj.html">t1a07-decisions-by-dj.html</a>
 <li><a href="t1a08-loops-by-dj.html">t1a08-loops-by-dj.html</a>
 <li><a href="t1a09-functions-by-dj.html">t1a09-functions-by-dj.html</a>
-<li><a href="">...</a>
+<li><a href=" t1a10-events-by-dj.html"> t1a10-events-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
