--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
-<li><a href="">...</a>
+<li><a href="fun-test-by-dj.html">fun-test-by-dj.html</a>
 <li><a href="https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images">https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images</a>
 <li><a href="https://github.com/ibench205/game-dev-2023-2024/tree/main">my Github</a>
 <li><a href="work-not-screen-dj.md">work-not-screen-dj.md</a>
