--- a/public/fun-test-by-dj.html
+++ b/public/fun-test-by-dj.html
@@ -1,6 +1,6 @@
 <table border=1>
-<tr><td>something cool</td></td> 
-<ul> top 3 leg ecercises
+<tr><td>something cool</td>
+  <td> <ul> top 3 leg ecercises
   <li> bench press
   <li> incline bench
   <li> cable chest flys</li></li></ul></tr>
