--- a/public/fun-test-by-dj.html
+++ b/public/fun-test-by-dj.html
@@ -5,3 +5,15 @@
   <li> incline bench
   <li> cable chest flys</li></li></ul></tr>
   </table><br>
+<table border=1>
+<tr><td>This is an image <br>
+<img width=200 src="https://images.app.goo.gl/2Ep9ouQxxSGDTTmF7"><br><br>
+</td>
+  <td>
+Youtube Embedded video <br>
+<iframe width="300" height="200" src="https://youtu.be/3cB11O2YpXc?si=zXWIwCEQiMLuF39r" frameborder="0" 
+allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<hr>
+<div>This is a </div>
+<div>div</div></ul></tr>
+  </table><br>
