--- a/public/fun-test-by-dj.html
+++ b/public/fun-test-by-dj.html
@@ -14,6 +14,6 @@ Youtube Embedded video <br>
 <iframe width="300" height="200" src="https://youtu.be/3cB11O2YpXc?si=zXWIwCEQiMLuF39r" frameborder="0" 
 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <hr>
-<div>This is a </div>
+<div> </div>
 <div>div</div></ul></tr>
   </table><br>
