--- a/public/fun-test-by-dj.html
+++ b/public/fun-test-by-dj.html
@@ -15,5 +15,5 @@ Youtube Embedded video <br>
 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <hr>
 <div> </div>
-<div>div</div></ul></tr>
+<div></div></ul></tr>
   </table><br>
