--- a/public/t2a20-game-template-dj.html
+++ b/public/t2a20-game-template-dj.html
@@ -1,6 +1,6 @@
 <h6> Version 0.0.1 </h6>
 
-<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="myBackground01.jpg">
+<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="blue screenuhohh.jpg">
 
 <h1 align=center>t2a11 Game Template by Fred</h1>
 <br><br><br><br>
