--- a/public/t2a20-game-template-dj.html
+++ b/public/t2a20-game-template-dj.html
@@ -35,7 +35,7 @@ function myCheckHit(){
    if ( myHitOther('myImg01','myImg02') ){
        alert('you lose')  
        document.getElementById('myImg01').style.left = '20px'
-       location = 't2a13-keydown.html'  // go to your next level
+       location = 'Respawn.webp'  // go to your next level
    }
 
 
