--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <li><a href="t1a09-functions-by-dj.html">t1a09-functions-by-dj.html</a>
 <li><a href="t1a10-events-by-dj.html"> t1a10-events-by-dj.html</a>
 <li><a href="">...</a>
-<li><a href="">...</a>
+<li><a href="t2a02-objects2-by-dj.html">t2a02-objects2-by-dj.html</a>
 <li><a href="t2a20-game-template-dj.html">game template  t2a20-game-template-dj.html</a>
 <li><a href="fun-test-by-dj.html">fun-test-by-dj.html</a>
 <li><a href="https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images">https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images</a>
