--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <li><a href="t1a10-events-by-dj.html"> t1a10-events-by-dj.html</a>
 <li><a href="t2a01-array2-by-dj.html">t2a01-array2-by-dj.html</a>
 <li><a href="t2a02-objects2-by-dj.html">t2a02-objects2-by-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t2a03-classes-by-dj.html">t2a03-classes-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
