--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <li><a href="t2a01-array2-by-dj.html">t2a01-array2-by-dj.html</a>
 <li><a href="t2a02-objects2-by-dj.html">t2a02-objects2-by-dj.html</a>
 <li><a href="t2a03-classes-by-dj.html">t2a03-classes-by-dj.html</a>
-<li><a href="">...</a>
+<li><a href="t2a04-extend-class-by-dj.html">t2a04-extend-class-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
