--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <li><a href="t2a04-extend-class-by-dj.html">t2a04-extend-class-by-dj.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
-<li><a href="">...</a>
+<li><a href="t2a07-move-background-DJ.html">t2a07-move-background-DJ.html</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
 <li><a href="">...</a>
