--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -49,7 +49,7 @@ function myCheckHit(){
 </script>
 
 <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;"  src="fortnite default.jpg">
-<img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="Lincoln.jpg">
+<img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="bench press.jpg">
 
 <input type=button value="Auto Background Left" onclick="{
   clearInterval(myClock)
