--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,10 @@
 <li><a href="t2a02-objects2-by-dj.html">t2a02-objects2-by-dj.html</a>
 <li><a href="t2a03-classes-by-dj.html">t2a03-classes-by-dj.html</a>
 <li><a href="t2a04-extend-class-by-dj.html">t2a04-extend-class-by-dj.html</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
 <li><a href="t2a07-move-background-DJ.html">t2a07-move-background-DJ.html</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
-<li><a href="">...</a>
 <li><a href="t2a20-game-template-dj.html">game template  t2a20-game-template-dj.html</a>
 <li><a href="fun-test-by-dj.html">fun-test-by-dj.html</a>
-<li><a href="">fun-test-by-dj.html</a>
+<li><a href="final-game-dj.html">final-game-dj.html</a>
 <li><a href="https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images">https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images</a>
 <li><a href="https://github.com/ibench205/game-dev-2023-2024/tree/main">my Github</a>
 <li><a href="work-not-screen-dj.md">work-not-screen-dj.md</a>
