--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -35,7 +35,7 @@ function myCheckHit(){
    if ( myHitOther('myImg01','myImg02') ){
        alert('you lose')  
        document.getElementById('myImg01').style.left = '20px'
-       location = 'Respawn.webp'  // go to your next level
+       location = 'sillysam.jpg'  // go to your next level
    }
 
 
