--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -33,7 +33,7 @@ function myHitOther(my1,my2){
 
 function myCheckHit(){
    if ( myHitOther('myImg01','myImg02') ){
-       alert('you lose')  
+       alert('you win')  
        document.getElementById('myImg01').style.left = '20px'
        location = 'sillysam.jpg'  // go to your next level
    }
