--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -2,7 +2,7 @@
 
 <body id="myBody" style="background-repeat:repeat; background-size: 100%" background="gym.webp">
 
-<h1 align=center>dj final game</h1>
+<h1 align=center>load up the bench</h1>
 <br><br><br><br>
 
 <script>
