--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -68,4 +68,5 @@ function myCheckHit(){
   document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px'
   myCheckHit()     // checks for all collisions
 }"><br><br>
+</center>
 
