--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -1,6 +1,6 @@
-<h6> Version 0.0.1 </h6>
-
+<html>
 <body id="myBody" style="background-repeat:repeat; background-size: 100%" background="gym.webp">
+   <h6> Version 0.0.1 </h6>
 
 <h1 align=center>load up the bench</h1>
 <br><br><br><br>
@@ -69,4 +69,5 @@ function myCheckHit(){
   myCheckHit()     // checks for all collisions
 }"><br><br>
 </center>
-
+</body>
+</html>
