--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -6,7 +6,24 @@
 <br><br><br><br>
 
 <script>
-   
+
+      document.addEventListener('keydown', function (event) {
+            switch (event.key.toLowerCase()) {
+               case 'w':
+      document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) - 10 + 'px';
+                        break;
+               case 'a':
+      document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) - 10 + 'px';
+            break;
+               case 's':
+                     document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px';
+               break;
+                  case 'd':
+            document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px';
+                        break;
+                }
+            });
+
 
    // global variables here
    let myGlobalX = 0
