--- a/public/final-game-dj.html
+++ b/public/final-game-dj.html
@@ -1,90 +1,77 @@
 <html>
-<body id="myBody" style="background-repeat:repeat; background-size: 100%" background="gym.webp">
-   <h6> Version 0.0.1 </h6>
+  <body id="myBody" style="background-repeat: repeat; background-size: 100%" background="gym.webp">
+    <h6> Version 0.0.1 </h6>
 
-<h1 align=center>load up the bench</h1>
-<br><br><br><br>
+    <h1 align=center>load up the bench</h1>
+    <br /><br /><br /><br />
 
-<script>
-
+    <script>
       document.addEventListener('keydown', function (event) {
-            switch (event.key.toLowerCase()) {
-               case 'w':
-      document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) - 10 + 'px';
-                        break;
-               case 'a':
-      document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) - 10 + 'px';
+        switch (event.key.toLowerCase()) {
+          case 'w':
+            document.getElementById('myImg01').style.top = parseInt(document.getElementById('myImg01').style.top) - 10 + 'px';
             break;
-               case 's':
-                     document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px';
-               break;
-                  case 'd':
-            document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px';
-                        break;
-                }
-            });
+          case 'a':
+            document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) - 10 + 'px';
+            break;
+          case 's':
+            document.getElementById('myImg01').style.top = parseInt(document.getElementById('myImg01').style.top) + 10 + 'px';
+            break;
+          case 'd':
+            document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
+            break;
+        }
+      });
 
+      // global variables here
+      let myGlobalX = 0;
+      let myClock;
 
-   // global variables here
-   let myGlobalX = 0
-   let myClock
+      // global functions here
+      function myHitOther(my1, my2) {
+        // existing function remains unchanged
+      }
 
+      function myCheckHit() {
+        // existing function remains unchanged
+      }
 
-   // global functions here
-function myHitOther(my1,my2){
-   left1   = parseInt(document.getElementById(my1).style.left)
-   right1  = left1 + parseInt(document.getElementById(my1).style.width)
-   top1    = parseInt(document.getElementById(my1).style.top)   
-   bottom1 = top1   + parseInt(document.getElementById(my1).style.height)
-   left2   = parseInt(document.getElementById(my2).style.left)
-   right2  = left2 + parseInt(document.getElementById(my2).style.width)
-   top2    = parseInt(document.getElementById(my2).style.top)   
-   bottom2 = top2   + parseInt(document.getElementById(my2).style.height)
-   if ((right1  >=  left2  ) &&      	   
-       (bottom1 >=  top2   ) &&
-       (left1   <=  right2 ) &&
-       (top1    <=  bottom2) ){
-       return true
-   }
-}
+    </script>
 
+    <img
+      id="myImg01"
+      style="position:absolute; width:100px; height:80px; top:0px; left:50px;"
+      src="plates.jpg"
+    />
+    <img
+      id="myImg02"
+      style="position:absolute; width:100px; height:80px; top:0px; left:250px;"
+      src="bench press.jpg"
+    />
 
-function myCheckHit(){
-   if ( myHitOther('myImg01','myImg02') ){
-       alert('you win')  
-       document.getElementById('myImg01').style.left = '20px'
-       location = 'sillysam.jpg'  // go to your next level
-   }
+    <input
+      type="button"
+      value="Auto Background Left"
+      onclick="{
+        clearInterval(myClock);
+        let myTemp = '100px 0px';
+        myClock = setInterval(function () {
+          myGlobalX -= 5;
+          myTemp = myGlobalX + 'px 0px';
+          document.getElementById('myBody').style.backgroundPosition = myTemp;
+        }, 100);
+      }"
+    />
 
-
-   // more if statements here like the above
-
-
-
-}  // end of myCheckHit()
-
-
-</script>
-
-<img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;"  src="plates.jpg">
-<img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="bench press.jpg">
-
-<input type=button value="Auto Background Left" onclick="{
-  clearInterval(myClock)
-  let myTemp = '100px 0px'
-  myClock = setInterval(function(){
-      myGlobalX -= 5
-      myTemp =  myGlobalX + 'px 0px'
-      document.getElementById('myBody').style.backgroundPosition = myTemp
-  }, 100)
-    
-}">
-
-
-<input type=button value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
-  document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px'
-  myCheckHit()     // checks for all collisions
-}"><br><br>
-
-</body>
+    <input
+      type="button"
+      value="Image Right Fast Button"
+      onTouchStart="{this.click(); event.preventDefault();}"
+      onclick="{
+        document.getElementById('myImg01').style.left =
+          parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
+        myCheckHit(); // checks for all collisions
+      }"
+    /><br /><br />
+  </body>
 </html>
